--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2> Ebony Penson </h2>
 
       <img id="bio-image" src="https://avatars.githubusercontent.com/u/106852582?s=400&u=bba4901a0271b11d37e5c5870a3f664246eca756&v=4" alt="Ebony Penson">
-        <p>My name is Ebony Penson. Like Naruto, I'm a bit of an add ball, have a tragic past and am determined to be different and prove everyone wrong. Believe it! </p>
+        <p>My name is Ebony Penson. Like Naruto, I'm a bit of an odd ball, have a tragic past and am determined to be different and prove everyone wrong. Believe it! </p>
       <p> I am an artist: I draw, mold things out of clay, fix toys, customize shoes, and play 4 instruments. I love to game and swim, and I like to cosplay. I have 2 cats and 2 fish tanks and my saying is "Go big or go home". </p>
 
       <h2> My Top 3 Songs</h2>
